src/test/deca/syntax/invalid/if_nonconditionnel.deca
//  Description :
//            Structure ifthenelse avec un if sans condition
//
// Résultat:
//mismatched input '{' expecting '('
//
{
    if{}
    else if (bool){}
    else{}
}